--- a/easyUI/safety_quality_App/projectApp/src/style/index.less
+++ b/easyUI/safety_quality_App/projectApp/src/style/index.less
@@ -121,3 +121,7 @@ input {
     -webkit-appearance: none; 
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+//top 按钮样式
+.iconBack{
+    padding: 0.3rem;
+}
